--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@types/alt": "^0.16.32",
     "@types/bcryptjs": "^2.4.0",
+    "@types/body-parser": "^1.16.3",
+    "@types/cookie-parser": "^1.3.30",
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.35",
     "@types/mongoose": "^4.7.9",
@@ -20,6 +22,7 @@
     "@types/q": "^1.0.0",
     "@types/react": "^15.0.21",
     "@types/react-dom": "^0.14.23",
+    "@types/serve-favicon": "^2.2.28",
     "@types/uuid": "^2.0.29",
     "@types/winston": "^2.3.0",
     "alt": "^0.18.6",
@@ -40,6 +43,7 @@
     "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
+    "node-speak": "0.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rimraf": "^2.6.1",
