--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cookie-parser": "^1.3.30",
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.35",
+    "@types/howler": "^2.0.2",
     "@types/mongoose": "^4.7.9",
     "@types/node": "^7.0.12",
     "@types/q": "^1.0.0",
@@ -43,6 +44,7 @@
     "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
+    "howler": "^2.0.3",
     "node-speak": "0.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
