--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "howler": "^2.0.3",
-    "node-speak": "0.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rimraf": "^2.6.1",
+    "say": "^0.11.0",
     "ts-node": "^3.0.2",
     "tsify": "^3.0.1",
     "tslint": "^4.5.1",
