--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.35",
     "@types/howler": "^2.0.2",
+    "@types/jquery": "^2.0.41",
     "@types/mongoose": "^4.7.9",
     "@types/node": "^7.0.12",
     "@types/q": "^1.0.0",
