--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "**/.*"
   ],
   "dependencies": {
-    "bootstrap-sass": "^3.3.7"
+    "bootstrap-sass": "^3.3.7",
+    "font-awesome": "fontawesome#^4.7.0"
   }
 }
