--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/alt": "^0.16.32",
     "@types/bcryptjs": "^2.4.0",
+    "@types/bluebird": "^3.5.2",
     "@types/body-parser": "^1.16.3",
     "@types/cookie-parser": "^1.3.30",
     "@types/debug": "0.0.29",
@@ -62,6 +63,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
