--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "howler": "^2.0.3",
+    "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
